--- a/app/client/main.html
+++ b/app/client/main.html
@@ -5,6 +5,6 @@
   <title>Minerva</title>
 </head>
 
-<body style="background-color:#C1D9B1">
+<body style="background-color:#c1d9b1">
   <div id="root"></div>
 </body>
